# botamusique

./: .actrc  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.local  README.md  command.py  configuration.default.ini  configuration.example.ini  constants.py  docker-compose.yaml  dockerbuild.sh  entrypoint2.sh  hatch_build.py  ideas.md  interface.py  main.py  mumbleBot.py  pyproject.toml  requirements.txt  setup_venv_windows.bat  util.py  variables.py  wslc-build.ps1  wslc-run.ps1
.github/: dependabot.yaml
.github/workflows/: docker-image.yml  docker-pr-check.yaml.yml  docker-pr-check.yml
lang/: es_ES.json  ja_JP.json  zh_CN.json
media/: cache.py  file.py  playlist.py  url.py  url_from_playlist.py
pymumble/: README.md  requirements.txt  setup.py
pymumble/pymumble_py3/: mumble.py  soundoutput.py
pymumble_py3/: API.md  constants.py  mumble.py  mumble_pb2.py  soundqueue.py  users.py
pymumble_py3/tests/: test_crypto.py
scripts/: build.py  hatch_build.py  translate_templates.py
src/: command.py  constants.py  database.py  interface.py  main.py  mumbleBot.py  util.py
src/botamusique/: command.py  configuration.default.ini  constants.py  database.py  interface.py  main.py  mumbleBot.py  util.py
src/botamusique/lang/: en_US.json  fr_FR.json  it_IT.json  pt_BR.json
src/botamusique/media/: cache.py  file.py  playlist.py  radio.py  url.py  url_from_playlist.py
src/botamusique/static/css/: custom.css  dark.css  main.css
src/botamusique/static/js/: main.mjs
src/botamusique/static/js/lib/: theme.mjs
src/botamusique/web/: index.de_DE.html  index.en_US.html  index.es_ES.html  index.fr_FR.html  index.it_IT.html  index.ja_JP.html  index.pt_BR.html  index.zh_CN.html  need_token.es_ES.html  need_token.fr_FR.html  need_token.it_IT.html  need_token.ja_JP.html  need_token.nl_NL.html  need_token.pt_BR.html  need_token.zh_CN.html
src/botamusique/web/templates/: index.template.html  need_token.template.html
src/media/: cache.py  file.py  item.py  playlist.py  radio.py  url.py  url_from_playlist.py
src/pymumble_py3/: acl.py  blobs.py  callbacks.py  channels.py  crypto.py  errors.py  messages.py  mumble.py  mumble_pb2.py  pymumble_constants.py  soundoutput.py  soundqueue.py  tools.py  users.py
src/pymumble_py3/tests/: test_crypto.py
static/css/: dark.css  main.css
static/js/: app.mjs
tests/: conftest.py  test_constants.py  test_database.py  test_media_cache.py  test_media_file.py  test_media_item.py  test_media_playlist.py  test_media_radio.py
web/: babel.config.json  eslint.config.js  package-lock.json  package.json  webpack.config.cjs
web/css/: main.css
web/js/: app.mjs  main.mjs
web/js/lib/: util.mjs
web/sass/: app-dark.scss  app.scss  main.scss
web/templates/: .gitignore  index.de_DE.html  index.en_US.html  index.es_ES.html  index.fr_FR.html  index.it_IT.html  index.ja_JP.html  index.pt_BR.html  index.template.html  index.zh_CN.html  need_token.ja_JP.html  need_token.pt_BR.html  need_token.template.html
