[project]
name = "botamusique"
version = "8.7.1"
description = "Bot to play youtube / soundcloud / radio / local music on Mumble (using pymumble)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audioop-lts>=0.2.2",
    "flask>=3.1.2",
    "mutagen>=1.47.0",
    "opuslib-next>=1.1.5",
    "packaging>=25.0",
    "pillow>=12.2.0",
    "protobuf>=6.33.1",
    "pycryptodome>=3.23.0",
    "pyradios>=2.1.1",
    "filetype>=1.2",
    "requests>=2.32.5",
    "yt-dlp[default]>=2025.11.12",
]

[project.scripts]
botamusique = "botamusique.main:main"

[build-system]
requires = ["hatchling", "libsass>=0.23.0", "jinja2>=3.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/botamusique", "src/pymumble_py3"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.gitignore",
    "/.gitmodules",
    "/.dockerignore",
    "/Dockerfile",
    "/docker-compose.yaml",
    "/dockerbuild.sh",
    "/ideas.md",
    "/CLAUDE.md",
    "/uv.lock",
    "/static",
    "/tests"
]

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"


[tool.botamusique.build]
bootswatch_version = "5.3.8"
jquery_version = "4.0.0"
bootstrap_version = "5.3.8"
popperjs_version = "2.11.8"
fontawesome_version = "6.7.2"

[dependency-groups]
build = [
    "libsass>=0.23.0",
]
dev = [
    "pytest>=9.0.3",
    "pip>=25.0", # PyCharm uses it for its package management
]
