[project]
name = "botamusique"
version = "8.8.4"
description = "Bot to play youtube / soundcloud / radio / local music on Mumble (using pymumble)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audioop-lts>=0.2.2",
    "flask>=3.1.2",
    "mutagen>=1.47.0",
    "opuslib-next>=1.1.5",
    "packaging>=26.1",
    "pillow>=12.0.0",
    "protobuf>=7.35.0",
    "pycryptodome>=3.23.0",
    "pyradios>=2.1.1",
    "filetype>=1.2",
    "requests>=2.32.5",
    "yt-dlp[default]>=2026.6.9",
]

[project.scripts]
botamusique = "botamusique.main:main"

[build-system]
requires = ["hatchling", "jinja2>=3.0"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/botamusique", "src/pymumble_py3"]
# Template sources are build inputs; only their translated output ships.
exclude = ["/src/botamusique/web/templates"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.gitignore",
    "/.gitmodules",
    "/.dockerignore",
    "/Dockerfile",
    "/docker-compose.yaml",
    "/dockerbuild.sh",
    "/ideas.md",
    "/CLAUDE.md",
    "/uv.lock",
    "/static",
    "/tests",
    "/scripts",
    "/src/botamusique/web/templates",
]


[tool.hatch.build.hooks.custom]


[tool.botamusique.build]
bootswatch_version = "5.3.8"

[dependency-groups]
build = [
    "jinja2>=3.0",
]
dev = [
    "pytest>=9.1.1",
    "pip>=26.1.2", # PyCharm uses it for its package management
]
